--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "module": "commonjs",
     "target": "es5",
     "allowJs": true,
-    "lib": ["es2015"],
-    "typeRoots": ["node_modules/@types/"]
+    "lib": [ "es2015", "es2015.symbol", "dom" ],
+    "typeRoots": [ "node_modules/@types/" ]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "test/**/*"]
