--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
     "slp-balances": "^0.2.5",
-    "slp-sdk": "^1.1.1",
-    "slpjs": "^0.11.1",
+    "slp-sdk": "file:../slp-sdk",
+    "slpjs": "file:../slpjs",
     "socket.io": "^2.1.1",
     "strftime": "^0.10.0",
     "swagger-stats": "^0.95.6",
