--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "baseUrl": ".",
+    "downlevelIteration": true,
     "module": "commonjs",
     "target": "es5",
     "allowJs": true,
-    "lib": ["es2015", "es2015.symbol", "dom"],
+    "lib": ["es2015", "es2015.symbol", "dom", "es2017"],
     "typeRoots": ["node_modules/@types/"]
   },
   "include": ["src/**/*"],
