--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rest.bitcoin.com",
-  "version": "3.10.2",
+  "version": "3.10.3",
   "description": "REST API for Bitcoin.com's Cloud",
   "author": "Gabriel Cardona <gabriel@bitcoin.com>",
   "contributors": [
@@ -23,15 +23,14 @@
     "node": ">=10.15.3"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "bitbox-sdk": "8.0.2",
+    "axios": "0.19.0",
+    "bitbox-sdk": "8.3.2",
     "bitcoincash-zmq-decoder": "0.1.5",
-    "body-parser": "^1.18.3",
-    "cashaccounts": "0.3.3",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.3",
+    "body-parser": "1.19.0",
+    "cashaccounts": "0.4.0",
+    "cookie-parser": "1.4.4",
+    "cors": "2.8.5",
     "debug": "~2.6.3",
-    "dotenv": "^4.0.0",
     "elasticsearch": "^13.0.1",
     "express": "^4.15.5",
     "express-basic-auth": "^1.1.3",
@@ -45,7 +44,6 @@
     "mocha": "6.1.4",
     "mongoose": "^4.10.5",
     "morgan": "^1.9.1",
-    "mqtt": "^2.8.0",
     "passport": "^0.4.0",
     "passport-anonymous": "^1.0.1",
     "passport-http": "^0.3.0",
@@ -57,7 +55,7 @@
     "swagger-stats": "^0.95.6",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0",
-    "zeromq": "^4.6.0"
+    "zeromq": "5.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
