--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "npm run build && node ./dist/app.js",
+    "start": "npm run build && node ./dist/src/app.js",
     "build": "node ./node_modules/gulp/bin/gulp.js build && ./node_modules/typescript/bin/tsc",
     "dev": "nodemon ./dist/app.js",
-    "test": "npm run test-v2",
-    "test-v2": "export NETWORK=testnet && npm run build && nyc --reporter=text mocha --require babel-core/register --timeout 25000 test/v2/ --exit",
+    "test": "NETWORK=testnet && npm run build && nyc mocha test/v2/unit --timeout 60000 --exit",
     "test-v2-no-build": "export NETWORK=testnet && nyc --reporter=text mocha --require babel-core/register --timeout 25000 test/v2/",
     "test-all": "TEST=integration nyc --reporter=text mocha --require babel-core/register --timeout 15000 test/v2/",
     "test:integration": "mocha test/v2/integration --exit",
@@ -26,11 +25,11 @@
     "axios": "0.19.0",
     "bitbox-sdk": "8.3.2",
     "bitcoincash-zmq-decoder": "0.1.5",
-    "body-parser": "1.19.0",
-    "cashaccounts": "0.4.0",
-    "cookie-parser": "1.4.4",
-    "cors": "2.8.5",
-    "express": "4.17.1",
+    "body-parser": "^1.18.3",
+    "cashaccounts": "0.3.3",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
+    "express": "^4.15.5",
     "express-basic-auth": "^1.1.3",
     "express-rate-limit": "^2.11.0",
     "gulp-json-modify": "^1.0.2",
@@ -48,7 +47,7 @@
     "swagger-stats": "^0.95.6",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0",
-    "zeromq": "5.1.0"
+    "zeromq": "^4.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
@@ -68,6 +67,7 @@
     "request-promise": "^4.2.2",
     "semantic-release": "^15.11.0",
     "sinon": "^6.3.4",
+    "ts-node": "^8.1.0",
     "typescript": "^3.1.4"
   },
   "release": {
