--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,12 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    //"noImplicitAny": true,
-    "baseUrl": ".",
     "module": "commonjs",
     "target": "es5",
-    "allowJs": true,
-    "lib": ["es2015", "es2015.symbol", "dom", "es2017"],
-    "typeRoots": ["node_modules/@types/"],
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "moduleResolution": "node",
+    "lib": ["es2017"],
+    "sourceMap": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "test/**/*"]
+  "include": ["./src/**/*", "./test/v2/unit/**/*.ts"],
+  "exclude": ["./node_modules/**/*"]
 }
