--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "npm run build && node ./dist/src/app.js",
+    "start": "npm run build && node ./dist/app.js",
     "build": "node ./node_modules/gulp/bin/gulp.js build && ./node_modules/typescript/bin/tsc",
     "dev": "nodemon ./dist/app.js",
-    "test": "NETWORK=testnet && npm run build && nyc mocha test/v2/unit --timeout 60000 --exit",
+    "test": "npm run test-v2",
+    "test-v2": "export NETWORK=testnet && npm run build && nyc --reporter=text mocha --require babel-core/register --timeout 25000 test/v2/ --exit",
     "test-v2-no-build": "export NETWORK=testnet && nyc --reporter=text mocha --require babel-core/register --timeout 25000 test/v2/",
     "test-all": "TEST=integration nyc --reporter=text mocha --require babel-core/register --timeout 15000 test/v2/",
     "test:integration": "mocha test/v2/integration --exit",
@@ -22,13 +23,16 @@
     "node": ">=10.15.3"
   },
   "dependencies": {
-    "axios": "0.19.0",
+    "axios": "^0.19.0",
     "bitbox-sdk": "8.3.2",
     "bitcoincash-zmq-decoder": "0.1.5",
     "body-parser": "^1.18.3",
     "cashaccounts": "0.3.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
+    "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
+    "elasticsearch": "^13.0.1",
     "express": "^4.15.5",
     "express-basic-auth": "^1.1.3",
     "express-rate-limit": "^2.11.0",
@@ -36,13 +40,19 @@
     "helmet": "^3.12.1",
     "jade": "~1.11.0",
     "level": "^4.0.0",
+    "mkdirp": "^0.5.1",
     "mocha": "6.1.4",
+    "mongoose": "^4.10.5",
     "morgan": "^1.9.1",
+    "mqtt": "^2.8.0",
     "passport": "^0.4.0",
     "passport-anonymous": "^1.0.1",
     "passport-http": "^0.3.0",
+    "pg": "^6.2.3",
+    "pg-hstore": "^2.3.2",
     "slp-sdk": "4.3.0",
     "socket.io": "^2.1.1",
+    "strftime": "^0.10.0",
     "swagger-stats": "^0.95.6",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0",
@@ -57,6 +67,7 @@
     "fs-extra": "^7.0.0",
     "gulp": "^3.9.1",
     "nock": "^10.0.0",
+    "node-mocks-http": "^1.7.0",
     "nodemon": "^1.18.1",
     "nyc": "^11.6.0",
     "pandacash-core": "^0.1.0",
@@ -66,7 +77,6 @@
     "request-promise": "^4.2.2",
     "semantic-release": "^15.11.0",
     "sinon": "^6.3.4",
-    "ts-node": "^8.1.0",
     "typescript": "^3.1.4"
   },
   "release": {
