--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "typeRoots": ["node_modules/@types/"],
     "downlevelIteration": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "test/**/*"]
+  "include": ["src/**/*", "test/**/*"],
+  "exclude": ["node_modules"]
 }
